--- a/src/scss/main/_index.scss
+++ b/src/scss/main/_index.scss
@@ -1,8 +1,7 @@
-/* INDEX
-================================================== */
+
 
 main {
-  // padding: 10rem 1rem 5rem;
+  padding: 20rem 1rem 5rem;
 }
 
 /*Covers*/
