--- a/src/scss/base/_header.scss
+++ b/src/scss/base/_header.scss
@@ -21,10 +21,8 @@
 
 
 header:not(.post-header) {
-  position: sticky;
+  position: fixed;
   width: 100%;
-  top: 0;
-  left: 0;
   display: grid;
   grid-template-columns: 0.1fr repeat(7, 1fr);
   grid-template-rows: 1fr;
@@ -33,9 +31,10 @@ header:not(.post-header) {
   align-items: center;
   padding: 0 calc(var(--lineHeight) * 1);
   padding-top: calc(var(--lineHeight) * 1);
+  text-transform: uppercase;
   color: var(--foreground-color);
   mix-blend-mode: difference;
-  text-transform: uppercase;
+  z-index: 20;
   .dark-mode-toggle {
     display: flex;
     svg {
@@ -103,9 +102,8 @@ header:not(.post-header) {
   grid-row: 1;
   justify-self: end;
   width: 100%;
+  height: 100%;
   svg {
-    width: 100%;
-    height: 100%;
     transform: scale(1, 1);
     transform-origin: right top;
     transition: transform 0.6s ease-in-out, transform-origin 0.6s ease-in-out;
@@ -117,9 +115,8 @@ header:not(.post-header) {
   grid-row: 1;
   justify-self: end;
   width: 100%;
+  height: 100%;
   svg {
-    width: 100%;
-    height: 100%;
     transform: scale(0.2, 0.2);
     transform-origin: right top;
     transition: transform 1s ease-in-out, transform-origin 1s ease-in-out;
