--- a/src/scss/pages/_homepageLayout.scss
+++ b/src/scss/pages/_homepageLayout.scss
@@ -1,13 +1,16 @@
 #wrapper {
   position: sticky;
-  top: 0;
+  top: 250px;
   padding-top: calc(var(--lineHeight) * 1);
   z-index: 20;
+  transition: top 0.6s ease-in-out;
+}
+
+.scroll-layout {
+  top: 0px!important;
 }
 
 nav {
-  color: var(--foreground-color);
-  mix-blend-mode: difference;
   display: grid;
   grid-auto-flow: column;
   grid-auto-columns: max-content;
@@ -21,6 +24,8 @@ nav {
     user-select: none;
     justify-content: center;
     cursor: pointer;
+    mix-blend-mode: difference;
+    color: var(--foreground-color);
   }
 
   div.active {
@@ -41,11 +46,12 @@ nav {
 
 
 
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 600px) {
   #wrapper {
-    position: sticky;
-    top: 0;
-    padding-top: calc(var(--lineHeight) * 5);
+    top: 100vh;
+    transition: top 0.8s ease-in-out;
   }
-
+  .scroll-layout {
+    top: 150px!important;
+  }
 }
