--- a/src/scss/main/_index.scss
+++ b/src/scss/main/_index.scss
@@ -1,7 +1,7 @@
 
 
 main {
-  padding: 20rem 1rem 5rem;
+  padding: 25rem 1rem 5rem;
 }
 
 /*Covers*/
@@ -11,34 +11,33 @@ main.covers {
   grid-template-columns: 1fr 1fr;
   grid-gap: 10rem 1rem;
   align-items: flex-end;
+  z-index: 1;
+  .project {
+    height: fit-content;
+    height: -moz-fit-content;
+    display: grid;
+    grid-gap: .5rem;
+    .trigger {
+      display: block;
+      grid-area: 1;
+      cursor: auto;
+    }
+  }
+  .project.big {
+    width: 100%;
+    max-width: 1800px;
+    grid-column: auto/span 2;
+    padding: 0 15%;
+    margin: 0 auto;
+  }
+  .project.medium {
+    margin: 10rem 0;
+  }
+  .project.small {
+    padding: 0 25%;
+    align-self: flex-start;
+  }
+
 }
 
-main.covers .project {
-  height: fit-content;
-  height: -moz-fit-content;
-  display: grid;
-  grid-gap: .5rem;
-}
 
-main.covers .project.big {
-  width: 100%;
-  max-width: 1800px;
-  grid-column: auto/span 2;
-  padding: 0 15%;
-  margin: 0 auto;
-}
-
-main.covers .project.medium {
-  margin: 10rem 0;
-}
-
-main.covers .project.small {
-  padding: 0 25%;
-  align-self: flex-start;
-}
-
-main.covers .project .trigger {
-  display: block;
-  grid-area: 1;
-  cursor: auto;
-}
