--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -630,7 +630,7 @@ header:not(.post-header) {
   text-transform: uppercase;
   color: var(--foreground-color);
   mix-blend-mode: difference;
-  z-index: 20;
+  z-index: 10;
 }
 
 header:not(.post-header) .dark-mode-toggle {
@@ -710,31 +710,34 @@ header:not(.post-header) .active {
 }
 
 .home-logo {
-  grid-column: 3/9;
+  grid-column: 1/9;
   grid-row: 1;
   justify-self: end;
   width: 100%;
-  height: 100%;
+  transition: width 0.6s ease-in-out;
+  pointer-events: none;
 }
 
 .home-logo svg {
+  top: 30px;
+  position: relative;
   transform: scale(1, 1);
   transform-origin: right top;
-  transition: transform 0.6s ease-in-out, transform-origin 0.6s ease-in-out;
+  transition: top 0.6s ease-in-out, transform 0.6s ease-in-out, transform-origin 0.6s ease-in-out;
 }
 
 .scroll-logo {
-  grid-column: 3/9;
+  grid-column: 1/9;
   grid-row: 1;
   justify-self: end;
-  width: 100%;
-  height: 100%;
+  width: 15%;
+  pointer-events: all;
 }
 
 .scroll-logo svg {
-  transform: scale(0.2, 0.2);
-  transform-origin: right top;
-  transition: transform 1s ease-in-out, transform-origin 1s ease-in-out;
+  top: 0;
+  position: relative;
+  transform: scale(1, 1);
 }
 
 @media only screen and (max-width: 720px) {
@@ -4844,10 +4847,12 @@ main.filter-active .project:not(.filter-active) {
 #wrapper {
   position: -webkit-sticky;
   position: sticky;
-  top: 250px;
+  top: 300px;
   padding-top: calc(var(--lineHeight) * 1);
-  z-index: 20;
-  transition: top 0.6s ease-in-out;
+  transition: top 0.9s ease-in-out;
+  width: 50%;
+  margin: auto;
+  z-index: 10;
 }
 
 .scroll-layout {
@@ -4878,6 +4883,10 @@ nav div {
   color: var(--foreground-color);
 }
 
+nav div:hover {
+  color: var(--primary-color);
+}
+
 nav div.active {
   pointer-events: none;
   color: var(--primary-color);
@@ -4903,7 +4912,7 @@ nav div.active ::after {
   }
 
   .scroll-layout {
-    top: 150px !important;
+    top: 75px !important;
   }
 }
 
@@ -4973,7 +4982,7 @@ main.list ~ #top {
 }
 
 main {
-  padding: 20rem 1rem 5rem;
+  padding: 25rem 1rem 5rem;
 }
 
 /*Covers*/
@@ -4983,6 +4992,7 @@ main.covers {
   grid-template-columns: 1fr 1fr;
   grid-gap: 10rem 1rem;
   align-items: flex-end;
+  z-index: 1;
 }
 
 main.covers .project {
@@ -4991,6 +5001,12 @@ main.covers .project {
   height: -moz-fit-content;
   display: grid;
   grid-gap: 0.5rem;
+}
+
+main.covers .project .trigger {
+  display: block;
+  grid-area: 1;
+  cursor: auto;
 }
 
 main.covers .project.big {
@@ -5008,12 +5024,6 @@ main.covers .project.medium {
 main.covers .project.small {
   padding: 0 25%;
   align-self: flex-start;
-}
-
-main.covers .project .trigger {
-  display: block;
-  grid-area: 1;
-  cursor: auto;
 }
 
 /*Grid*/
@@ -5829,49 +5839,6 @@ transition: filter .3s linear;
 
   body.scroll-active menu {
     margin-bottom: calc(10.25rem + 2em);
-  }
-
-  /*Footer*/
-
-  .page-index footer {
-    padding-bottom: calc(1rem + 39px);
-  }
-
-  footer,
-  footer wrap + div {
-    grid-gap: 2rem 1rem;
-  }
-
-  footer wrap + div br {
-    display: block;
-  }
-
-  footer wrap {
-    grid-area: 4;
-  }
-
-  footer label span,
-  footer div:last-of-type a + span {
-    display: none;
-  }
-
-  footer div:last-of-type {
-    justify-self: flex-start;
-    align-self: flex-end;
-    grid-column: 2 span;
-    display: grid;
-  }
-
-  footer div:last-of-type a span:last-child {
-    display: inline-block !important;
-  }
-
-  footer div:last-of-type a span:first-child::after {
-    content: ":";
-  }
-
-  .desktop footer div:last-of-type a:hover span:first-child {
-    display: inline-block;
   }
 
   /*Project Page*/
