--- a/src/scss/pages/_homepageLayout.scss
+++ b/src/scss/pages/_homepageLayout.scss
@@ -1,9 +1,11 @@
 #wrapper {
   position: sticky;
-  top: 250px;
+  top: 300px;
   padding-top: calc(var(--lineHeight) * 1);
-  z-index: 20;
-  transition: top 0.6s ease-in-out;
+  transition: top 0.9s ease-in-out;
+  width: 50%;
+  margin: auto;
+  z-index: 10;
 }
 
 .scroll-layout {
@@ -26,6 +28,9 @@ nav {
     cursor: pointer;
     mix-blend-mode: difference;
     color: var(--foreground-color);
+  }
+  div:hover {
+    color: var(--primary-color);
   }
 
   div.active {
@@ -52,6 +57,6 @@ nav {
     transition: top 0.8s ease-in-out;
   }
   .scroll-layout {
-    top: 150px!important;
+    top: 75px!important;
   }
 }
