--- a/src/scss/components/_type.scss
+++ b/src/scss/components/_type.scss
@@ -200,24 +200,24 @@ h1.xxxlarge,
 
 /* small text */
 
-.small {
-  font-size: 0.85rem;
-  line-height: var(--lineHeight);
-}
+// .small {
+//   font-size: 0.85rem;
+//   line-height: var(--lineHeight);
+// }
 
 /* small text */
 
-.large {
-  font-size: 1.5rem;
-  font-weight: 400;
-  line-height: var(--lineHeight);
-}
+// .large {
+//   font-size: 1.5rem;
+//   font-weight: 400;
+//   line-height: var(--lineHeight);
+// }
 
-.medium {
-  font-size: 1.2rem;
-  font-weight: 500;
-  line-height: var(--lineHeight);
-}
+// .medium {
+//   font-size: 1.2rem;
+//   font-weight: 500;
+//   line-height: var(--lineHeight);
+// }
 
 .medium.single-line {
   margin-top: var(--lineHeight);
