--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -228,6 +228,7 @@ body {
   font-feature-settings: "kern" 1, "liga" 1, "calt" 1, "cv10" 1;
   box-sizing: border-box;
   font-smoothing: antialiased;
+  text-transform: uppercase;
 }
 
 .hidden {
@@ -1056,6 +1057,10 @@ div.categories .category-button:active {
   color: var(--primary-color);
 }
 
+.category-legend-title {
+  margin-left: 20px;
+}
+
 div.categories-mobile {
   display: none;
 }
@@ -1081,37 +1086,19 @@ div.categories-mobile {
 }
 
 .post-header {
-  position: relative;
-}
-
-.post-header::before {
-  transition: opacity 0.2s;
-  content: "";
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-.toggle.post-header::before {
-  opacity: 0;
-}
-
-.post-header {
   display: grid;
   grid-column-gap: 10px;
   align-items: center;
   grid-template-columns: repeat(8, 1fr);
-  overflow: hidden;
-  height: 5em;
-  transition: height 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
 .post-header .post-title {
-  display: grid;
   grid-column: 1/5;
   margin: 0;
-  font-size: var(--h1-size);
-  transition: font-size 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+}
+
+.post-header .post-title .title {
+  margin-left: 20px;
 }
 
 .post-header .post-meta-information {
@@ -1122,72 +1109,6 @@ div.categories-mobile {
 }
 
 .post-header .post-meta-information p {
-  margin: 0;
-}
-
-.post-header .post-header-toggle {
-  grid-column: 8/9;
-  transition: transform 0.2s ease;
-  display: grid;
-  justify-self: end;
-}
-
-.post-header .post-chevron {
-  overflow: visible;
-  position: absolute;
-  width: 30px;
-  right: 0;
-  transition: transform 1s cubic-bezier(0.86, 0, 0.07, 1), transform-origin 1s cubic-bezier(0.86, 0, 0.07, 1);
-  transform: translateY(0);
-  opacity: 0.8;
-}
-
-.post-header .post-chevron::before,
-.post-header .post-chevron::after {
-  content: "";
-  display: block;
-  width: 20px;
-  height: 2px;
-  bottom: 6px;
-  position: absolute;
-  background: var(--foreground-color);
-  z-index: 1;
-  transition: transform 0.5s cubic-bezier(0.86, 0, 0.07, 1), transform-origin 0.5s cubic-bezier(0.86, 0, 0.07, 1);
-}
-
-.post-header .post-chevron::before {
-  right: 70%;
-  border-radius: 0.5px 0 0 0.5px;
-  transform-origin: 100% 0%;
-  transform: rotate(-40deg) scaleY(1.1);
-}
-
-.post-header .post-chevron::after {
-  left: 30%;
-  border-radius: 0 0.5px 0.5px 0;
-  transform-origin: 0% 0%;
-  transform: rotate(40deg) scaleY(1.1);
-}
-
-.post-header .post-header-toggle.toggle .post-chevron {
-  transform: translateY(11px);
-}
-
-.post-header .post-header-toggle.toggle .post-chevron::before {
-  transform-origin: 100% 100%;
-  transform: rotate(40deg) scaleY(1.1);
-}
-
-.post-header .post-header-toggle.toggle .post-chevron::after {
-  transform-origin: 0% 100%;
-  transform: rotate(-40deg) scaleY(1.1);
-}
-
-.post-header .post-chevron:hover {
-  opacity: 1;
-}
-
-.post-header .post-meta p {
   margin: 0;
 }
 
@@ -1206,109 +1127,18 @@ div.categories-mobile {
   white-space: initial;
 }
 
-.close-post::after {
-  content: "";
-  margin-left: 4px;
-  display: inline-block;
-  width: 11px;
-  height: 11px;
-  background: url("/images/icons/close.svg") center no-repeat;
-  background-size: contain;
-}
-
-.post.hide {
-  display: none;
-}
-
-.post-content {
-  padding-top: 20px;
-  padding-bottom: calc(var(--lineHeight) * 2 );
+.post {
   display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: -webkit-min-content 1fr;
-  grid-template-rows: min-content 1fr;
-  grid-column-gap: 10px;
-  grid-row-gap: var(--rowGap);
-}
-
-.post-content ul {
-  padding-left: 0;
-}
-
-.post-content li {
-  margin-bottom: calc(var(--baseline) * -0.4 );
-}
-
-.post-content .work-description {
-  display: flex;
-  flex-direction: column;
-  grid-column: 6/9;
-}
-
-.post-content .work-description section {
-  padding: calc(var(--lineHeight) * 0.3) 0;
+  height: 50px;
   border-bottom: 1px solid var(--foreground-color);
 }
 
-.post-content .post-gallery {
-  grid-column: 1/6;
-  grid-row: 1/3;
+.client {
+  justify-self: end;
 }
 
-.post-content .post-gallery img,
-.post-content .post-gallery video {
-  display: block;
-  width: 100%;
-  border-radius: var(--b-r-small);
-}
-
-.post-content .post-gallery video[poster] {
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.post-content .video-wrapper {
-  width: 100%;
-}
-
-.post-content .text-counter {
-  margin-top: auto;
-}
-
-.post-content .work-subpage-link {
-  grid-column: 6/9;
-  grid-row: 2;
-}
-
-.post-content .work-subpage-link .more {
-  display: table;
-  margin-right: auto;
-  font-size: large;
-  color: var(--foreground-color);
-  transform: translateX(10px);
-  transition: transform 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0ms;
-}
-
-.post-content .work-subpage-link svg {
-  display: inline-block;
-  width: 100%;
-  vertical-align: middle;
-  fill: var(--foreground-color);
-  transition: transform 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0ms;
-}
-
-.post-header:hover {
-  cursor: pointer;
-}
-
-.post-header:hover .post-meta,
-.post-header:hover .post-title {
-  color: var(--primary-color);
-}
-
-.post-header:hover .post-chevron::before,
-.post-header:hover .post-chevron::after {
-  background: var(--primary-color);
+.hide {
+  display: none;
 }
 
 .slider {
@@ -1553,12 +1383,6 @@ button {
   background-color: rgba(255, 255, 255, 0.25);
 }
 
-@media screen and (max-width: 1080px) {
-  .post-header .post-title {
-    font-size: 1.75em;
-  }
-}
-
 @media (min-width: 320px) and (max-width: 877px) {
   div.categories {
     padding: calc(var(--lineHeight) * 0.25) 0;
@@ -1737,7 +1561,6 @@ button {
   }
 
   .post-header .post-title {
-    font-size: 1.5em;
     justify-self: start;
     align-self: center;
     transition: font-size 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
@@ -4997,6 +4820,7 @@ main.grid .project .trigger {
 
 main.list {
   display: grid;
+  grid-template-rows: 50px;
 }
 
 main.list .project {
