--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -220,6 +220,7 @@ body {
   font-feature-settings: 'kern' 1, 'liga' 1, 'calt' 1, 'cv10' 1;
   box-sizing: border-box;
   font-smoothing: antialiased;
+  text-transform: uppercase;
 }
 
 // Pointer disable complete
