--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -4795,7 +4795,7 @@ main.covers .project.small {
 
 main.grid {
   display: grid;
-  grid-template-columns: repeat(5, calc(60%/5));
+  grid-template-columns: repeat(5, calc(60%/3));
   grid-gap: 5rem calc(40%/4);
   align-items: flex-start;
 }
@@ -5008,6 +5008,40 @@ main.scroll .project .thumbnail {
 
 /*Projects*/
 
+.project .image {
+  overflow: hidden;
+  position: relative;
+}
+
+.project .image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border: 0;
+  transform: scale(1);
+  filter: saturate(500%) blur(20px);
+  transition: all 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+}
+
+/*Projects*/
+
+.project:hover .image {
+  overflow: hidden;
+  position: relative;
+}
+
+.project:hover .image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border: 0;
+  transform: scale(1);
+  filter: saturate(100%) blur(0px);
+  transition: all 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+}
+
 .project:hover .project-information {
   color: var(--primary-color);
   display: flex;
@@ -5081,7 +5115,7 @@ main.scroll .project.last .thumbnail .thumb {
 /* main.scroll .thumbnail img,
 main.scroll .thumbnail video{
 object-fit: cover;
-} */
+}
 
 /* main.scroll .project:not(.active) .thumb{
     width: 100% !important;
