--- a/src/scss/main/_projects.scss
+++ b/src/scss/main/_projects.scss
@@ -13,6 +13,9 @@ main.scroll .project .thumbnail {
 }
 
 
+
+
+
 .project-information {
   cursor: pointer;
   display: flex;
@@ -33,7 +36,37 @@ main.scroll .project .thumbnail {
 }
 
 /*Projects*/
+.project {
+ .image {
+  overflow: hidden;
+  position: relative;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border: 0;
+    transform: scale(1);
+    filter: saturate(500%) blur(20px);
+    transition: all 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+  }
+ }
+}
+
+/*Projects*/
 .project:hover {
+  .image {
+    overflow: hidden;
+    position: relative;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border: 0;
+      transform: scale(1);
+      filter: saturate(100%) blur(0px);
+      transition: all 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+    }
+   }
   .project-information {
     color: var(--primary-color);
     display: flex;
@@ -109,7 +142,7 @@ main.scroll .project.last .thumbnail .thumb {
 /* main.scroll .thumbnail img,
 main.scroll .thumbnail video{
 object-fit: cover;
-} */
+}
 
 /* main.scroll .project:not(.active) .thumb{
     width: 100% !important;
