--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -520,8 +520,16 @@ a {
 
 img,
 video {
-  display: block;
   width: 100%;
+  height: 100%;
+  display: block;
+  -o-object-fit: contain;
+     object-fit: contain;
+  font-size: 0;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .flex-end {
@@ -5154,21 +5162,14 @@ main.scroll .project:nth-child(4n+4) .thumbnail .thumb {
 
 /*Project Header*/
 
-#close {
-  height: -webkit-fit-content;
-  height: fit-content;
-  height: -moz-fit-content;
-  position: fixed;
-  top: 1rem;
-  left: 1rem;
-  z-index: 9;
-}
-
 #project-header {
-  padding: 1rem 1rem 0;
   margin-bottom: 10rem;
   grid-template-columns: 4fr 2fr 5fr 1fr;
   display: grid;
+}
+
+#project-header time {
+  justify-self: end;
 }
 
 #project-header span {
@@ -5240,59 +5241,9 @@ main.scroll .project:nth-child(4n+4) .thumbnail .thumb {
 
 /*Module Slider*/
 
-.module-gallery-wrap {
-  display: flex;
-  flex-wrap: wrap;
+.module-gallery {
   padding: 0 1rem;
   margin: 10rem 0;
-  height: 50vw;
-  justify-content: flex-end;
-}
-
-.module-gallery-wrap .counter {
-  width: calc((100vw - 2rem)/12);
-  min-width: 50px;
-  text-align: right;
-  padding: 0 1rem;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-.module-gallery-wrap.left {
-  direction: rtl;
-}
-
-.module-gallery-wrap.left .counter {
-  direction: ltr;
-  text-align: left;
-}
-
-.slider,
-.slick-list,
-.slick-track,
-.slick-slide {
-  width: auto !important;
-  height: inherit !important;
-}
-
-.slider {
-  max-width: calc((100vw - 2rem)/12*11);
-}
-
-.slick-slide {
-  width: auto;
-  /* max-width: calc(100%/12*11); */
-  cursor: pointer;
-}
-
-.slick-initialized .slick-slide {
-  display: none !important;
-}
-
-.slick-current.slick-active {
-  display: block !important;
 }
 
 /*Module Text*/
@@ -5724,30 +5675,6 @@ transition: filter .3s linear;
   .module-two-columns .small {
     width: 100%;
     margin: 0;
-  }
-
-  .module-gallery-wrap {
-    height: auto;
-    margin: 1rem 0;
-    flex-wrap: wrap-reverse;
-  }
-
-  .module-gallery-wrap .counter {
-    width: 100%;
-    padding: 0.5rem 0 0;
-    direction: ltr;
-    text-align: left;
-  }
-
-  .slider {
-    max-width: none;
-  }
-
-  .slider,
-  .slick-list,
-  .slick-track,
-  .slick-slide {
-    width: 100% !important;
   }
 
   .module-text {
