--- a/src/scss/base/_header.scss
+++ b/src/scss/base/_header.scss
@@ -96,6 +96,7 @@ header:not(.post-header) {
   grid-column: 2 / 3;
   display: flex;
   padding: 0;
+  font-size: 20px;
 }
 .home-logo {
   grid-column: 1 / 9;
