--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -875,6 +875,10 @@ footer {
   display: none;
 }
 
+.footer-social {
+  padding-right: 20px;
+}
+
 @media only screen and (max-width: 768px) {
   footer {
     display: grid;
@@ -5046,25 +5050,15 @@ main.scroll .project .thumbnail {
   -o-object-fit: cover;
      object-fit: cover;
   border: 0;
-  filter: saturate(1000%) blur(100px);
-  transition: filter 0.3s linear;
+  opacity: 0;
+  transition: opacity 0.3s linear;
 }
 
 /*Projects*/
 
-.project:hover .image {
-  overflow: hidden;
-  position: relative;
-}
-
 .project:hover .image img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  border: 0;
-  filter: saturate(100%) blur(0px);
-  transition: filter 0.3s linear;
+  opacity: 1;
+  transition: opacity 0.3s linear;
 }
 
 .project:hover .project-information {
