--- a/src/scss/main/_projects.scss
+++ b/src/scss/main/_projects.scss
@@ -43,8 +43,8 @@ main.scroll .project .thumbnail {
     height: 100%;
     object-fit: cover;
     border: 0;
-    filter: saturate(1000%) blur(100px);
-    transition: filter 0.3s linear;
+    opacity: 0;
+    transition: opacity 0.3s linear;
   }
  }
 }
@@ -52,15 +52,9 @@ main.scroll .project .thumbnail {
 /*Projects*/
 .project:hover {
   .image {
-    overflow: hidden;
-    position: relative;
     img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border: 0;
-      filter: saturate(100%) blur(0px);
-      transition: filter 0.3s linear;
+      opacity: 1;
+      transition: opacity 0.3s linear;
     }
    }
   .project-information {
