--- a/src/scss/base/_footer.scss
+++ b/src/scss/base/_footer.scss
@@ -2,7 +2,7 @@ footer {
   bottom: 0;
   left: 0;
   right: 0;
-  padding: 1em calc(var(--lineHeight) * 2);
+  padding: 1em;
   display: flex;
   justify-content: space-between;
   text-transform: uppercase;
