--- a/src/scss/main/_projects.scss
+++ b/src/scss/main/_projects.scss
@@ -196,6 +196,15 @@ main.scroll .project:nth-child(4n+4) .thumbnail .thumb {
   margin: 1rem 0;
 }
 
+.module-full-width-video {
+  width: 100%;
+  padding: 0 1rem;
+  margin: 1rem 0;
+
+}
+
+
+
 .module-full-width.medium {
   height: 75vw;
 }
