--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -635,8 +635,7 @@ header:not(.post-header) {
   grid-column-gap: 10px;
   grid-row-gap: var(--rowGap);
   align-items: center;
-  padding: 0 calc(var(--lineHeight) * 1);
-  padding-top: calc(var(--lineHeight) * 1);
+  padding: 1rem 1rem 5rem;
   text-transform: uppercase;
   color: var(--foreground-color);
   mix-blend-mode: difference;
@@ -845,7 +844,7 @@ footer {
   bottom: 0;
   left: 0;
   right: 0;
-  padding: 1em calc(var(--lineHeight) * 2);
+  padding: 1em;
   display: flex;
   justify-content: space-between;
   text-transform: uppercase;
@@ -1631,117 +1630,44 @@ button {
   }
 }
 
-main.work-subpage {
-  padding-top: 1em;
+#barba-wrapper {
   display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-column-gap: var(--columnGap);
-  grid-row-gap: var(--rowGap);
+  grid-template-columns: 1fr 1fr;
 }
 
-main.work-subpage .cover {
-  grid-column: 1/9;
-  grid-row: 1;
-  border-bottom: 1px solid var(--foreground-color);
-  display: grid;
-}
-
-main.work-subpage .cover time {
-  padding-top: calc(var(--lineHeight) * 0.5);
-}
-
-main.work-subpage .work-subpage-content {
-  grid-column: 1/9;
-  grid-row: 2;
-  padding-bottom: 2em;
-}
-
-main.work-subpage .work-subpage-content h1,
-main.work-subpage .work-subpage-content h2 {
-  margin-top: calc(var(--lineHeight) * 0.5);
-}
-
-main.work-subpage .work-subpage-content p:not(.tags) {
-  margin-bottom: calc(var(--lineHeight) * 0.5);
-}
-
-main.work-subpage .work-subpage-content .subpage-information {
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-column-gap: 10px;
-}
-
-main.work-subpage .work-subpage-content .subpage-information a {
-  text-decoration: underline;
-}
-
-main.work-subpage .work-subpage-content .subpage-information ul {
-  padding-left: 0;
-}
-
-main.work-subpage .work-subpage-content .subpage-information .subpage-meta {
-  grid-column: 1/3;
-  grid-row: 1/3;
-  display: flex;
-  flex-direction: column;
-}
-
-main.work-subpage .work-subpage-content .subpage-information .subpage-description {
-  grid-column: 3/6;
-  grid-row: 1;
-}
-
-main.work-subpage .work-subpage-content .subpage-information .subpage-concept {
-  grid-column: 6/9;
-  grid-row: 1;
-}
-
-main.work-subpage .work-subpage-content .subpage-information .subpage-meta,
-main.work-subpage .work-subpage-content .subpage-information .subpage-description,
-main.work-subpage .work-subpage-content .subpage-information .subpage-concept,
-main.work-subpage .work-subpage-content .subpage-information .subpage-capabilities,
-main.work-subpage .work-subpage-content .subpage-information .subpage-contact {
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 1rem;
-}
-
-main.work-subpage .work-subpage-content .subpage-information .subpage-meta p.sub-sub-heading,
-main.work-subpage .work-subpage-content .subpage-information .subpage-description p.sub-sub-heading,
-main.work-subpage .work-subpage-content .subpage-information .subpage-concept p.sub-sub-heading,
-main.work-subpage .work-subpage-content .subpage-information .subpage-capabilities p.sub-sub-heading,
-main.work-subpage .work-subpage-content .subpage-information .subpage-contact p.sub-sub-heading {
-  border-bottom: 1px solid var(--foreground-color);
-}
-
-main.work-subpage .work-subpage-content .subpage-information #barba-wrapper {
-  grid-column: 3/9;
-  grid-row: 2;
-  padding-top: calc(var(--lineHeight) * 0.5);
-}
-
-main.work-subpage .work-subpage-content .subpage-information #barba-wrapper img,
-main.work-subpage .work-subpage-content .subpage-information #barba-wrapper video {
+#barba-wrapper img,
+#barba-wrapper video {
   display: block;
   width: 100%;
-  border-radius: var(--b-r-small);
 }
 
-main.work-subpage .work-subpage-content .subpage-information #barba-wrapper video[poster] {
+#barba-wrapper video[poster] {
   -o-object-fit: cover;
      object-fit: cover;
 }
 
-main.work-subpage .work-subpage-content .subpage-information .work-videos p,
-main.work-subpage .work-subpage-content .subpage-information .work-images p {
+#barba-wrapper .barba-container.right {
+  grid-column: 2;
+}
+
+#barba-wrapper .barba-container.left {
+  grid-column: 1;
+}
+
+.cat-list {
+  grid-column: 1/3;
+}
+
+.work-videos p,
+.work-images p {
   border-bottom: 1px solid var(--foreground-color);
 }
 
-main.work-subpage .work-subpage-content .subpage-information .video-wrapper {
+.video-wrapper {
   width: 100%;
 }
 
-main.work-subpage .work-subpage-content .subpage-information .video-wrapper .intro-play {
+.video-wrapper .intro-play {
   opacity: 1;
   position: absolute;
   left: 0;
@@ -1751,7 +1677,7 @@ main.work-subpage .work-subpage-content .subpage-information .video-wrapper .int
   transition: opacity 0s 0.75s;
 }
 
-main.work-subpage .work-subpage-content .subpage-information .video-wrapper .intro-play span {
+.video-wrapper .intro-play span {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -1764,7 +1690,7 @@ main.work-subpage .work-subpage-content .subpage-information .video-wrapper .int
   font-size: 16px;
 }
 
-main.work-subpage .work-subpage-content .subpage-information .text-counter {
+.text-counter {
   text-align: right;
 }
 
@@ -5196,6 +5122,12 @@ main.scroll .project:nth-child(4n+4) .thumbnail .thumb {
 
 .module-full-width {
   width: 100vw;
+  padding: 0 1rem;
+  margin: 1rem 0;
+}
+
+.module-full-width-video {
+  width: 100%;
   padding: 0 1rem;
   margin: 1rem 0;
 }
