--- a/src/scss/base/_work-subpage.scss
+++ b/src/scss/base/_work-subpage.scss
@@ -1,82 +1,34 @@
-main.work-subpage {
-  padding-top: 1em;
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-column-gap: var(--columnGap);
-  grid-row-gap: var(--rowGap);
-  // Hero
-  .cover {
-    grid-column: 1 / 9;
-    grid-row: 1;
-    border-bottom: 1px solid var(--foreground-color);
-    display: grid;
-    time {
-      padding-top: calc(var(--lineHeight) * 0.5);
-    }
-  }
-  // Content
-  .work-subpage-content {
-    grid-column: 1 / 9;
-    grid-row: 2;
-    padding-bottom: 2em;
-    h1,
-    h2 {
-      margin-top: calc(var(--lineHeight) * 0.5);
-    }
-    p:not(.tags) {
-      // margin-top: calc(var(--lineHeight) * 0.5);
-      margin-bottom: calc(var(--lineHeight) * 0.5);
-    }
-    .subpage-information {
-      display: grid;
-      grid-template-columns: repeat(8, 1fr);
-      grid-column-gap: 10px;
-      a {
-        text-decoration: underline;
-      }
-      ul{
-        padding-left: 0;
-      }
-      .subpage-meta {
-        grid-column: 1 / 3;
-        grid-row: 1 / 3;
-        display: flex;
-        flex-direction: column;
-      }
-      .subpage-description {
-        grid-column: 3 / 6;
-        grid-row: 1;
-      }
-      .subpage-concept {
-        grid-column: 6 / 9;
-        grid-row: 1;
-      }
-      .subpage-meta,
-      .subpage-description,
-      .subpage-concept,
-      .subpage-capabilities,
-      .subpage-contact {
-        display: flex;
-        flex-direction: column;
-        padding-bottom: 1rem;
-        p.sub-sub-heading {
-          border-bottom: 1px solid var(--foreground-color);
-        }
-      }
+
       #barba-wrapper {
-        grid-column: 3 / 9;
-        grid-row: 2;
-        padding-top: calc(var(--lineHeight) * 0.5);
+        display: grid;
+        grid-template-columns: 1fr 1fr;
         img,
         video {
           display: block;
           width: 100%;
-          border-radius: var(--b-r-small);
         }
         video[poster] {
           object-fit: cover;
         }
       }
+
+      #barba-wrapper {
+        .barba-container.right {
+          grid-column: 2;
+        }
+      }
+
+      #barba-wrapper {
+        .barba-container.left {
+          grid-column: 1;
+        }
+      }
+
+      .cat-list {
+        grid-column: 1/3;
+      }
+
+
       .work-videos,
       .work-images {
         // padding: calc(var(--lineHeight) * 1) 0;
@@ -111,9 +63,8 @@ main.work-subpage {
         .text-counter{
           text-align: right;
         }
-    }
-  }
-}
+
+
 .half {
   width: 50%;
 }
