--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -753,8 +753,7 @@ header:not(.post-header) .active {
 @media only screen and (max-width: 720px) {
   header:not(.post-header) {
     grid-template-columns: 0.5fr 4fr 2fr;
-    padding-top: calc(var(--lineHeight) * 1);
-    padding: var(--lineHeight);
+    padding: 1em;
     padding-bottom: 0;
   }
 
@@ -773,6 +772,7 @@ header:not(.post-header) .active {
   }
 
   .home-logo svg {
+    top: 0;
     transform: scale(2, 2);
   }
 
@@ -785,8 +785,7 @@ header:not(.post-header) .active {
   header:not(.post-header) {
     height: 100vh;
     grid-template-columns: 1fr 1fr;
-    padding-top: calc(var(--lineHeight) * 1);
-    padding: var(--lineHeight);
+    padding: 1em;
   }
 
   header:not(.post-header) .dark-mode-toggle {
@@ -800,7 +799,7 @@ header:not(.post-header) .active {
     font-size: 45px;
     line-height: 48px;
     grid-column: 1/3;
-    top: calc(100vh - 145px);
+    top: calc(100vh - 125px);
     position: absolute;
     flex-direction: column;
     align-items: start;
@@ -882,7 +881,6 @@ footer {
   footer {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: var(--lineHeight);
     font-size: 12px;
   }
 
@@ -4553,7 +4551,7 @@ main.filter-active .project:not(.filter-active) {
   position: -webkit-sticky;
   position: sticky;
   top: 300px;
-  padding-top: calc(var(--lineHeight) * 1);
+  padding-top: 1rem;
   transition: top 0.9s ease-in-out;
   width: 50%;
   margin: auto;
@@ -5101,6 +5099,7 @@ main.scroll .project:nth-child(4n+4) .thumbnail .thumb {
 
 #project-header {
   margin-bottom: 10rem;
+  margin-top: 5rem;
   grid-template-columns: 4fr 2fr 5fr 1fr;
   display: grid;
 }
@@ -5392,7 +5391,7 @@ transition: filter .3s linear;
   /*Project Page*/
 
   #project-header {
-    grid-template-columns: 1fr 1fr 2fr;
+    grid-template-columns: 4fr 2fr 5fr 1fr;
   }
 
   #credits wrap div {
@@ -5440,6 +5439,10 @@ transition: filter .3s linear;
 
   /*Index Covers*/
 
+  main.covers {
+    padding: 100vh 1rem 0;
+  }
+
   main.covers .project {
     width: 100%;
     justify-self: flex-start;
@@ -5486,16 +5489,6 @@ transition: filter .3s linear;
   	margin: 4rem auto 2rem;
   } */
 
-  /*Footer*/
-
-  footer label {
-    display: block;
-  }
-
-  .device footer div:last-of-type a span:first-child::after {
-    content: ":";
-  }
-
   /*Project Page*/
 
   .module-two-columns .small {
@@ -5503,7 +5496,7 @@ transition: filter .3s linear;
   }
 
   #credits {
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 1fr;
   }
 
   #credits wrap div {
@@ -5528,7 +5521,7 @@ transition: filter .3s linear;
   /*Index*/
 
   main {
-    padding: 100vh 1rem 0;
+    padding: 100vh 1rem 5rem;
   }
 
   main.list {
@@ -5574,24 +5567,23 @@ transition: filter .3s linear;
 
   /*Project Page*/
 
-  #close {
-    left: auto;
-    right: 1rem;
-  }
-
   #project-header {
     margin-bottom: 3rem;
     grid-template-columns: 1fr;
     grid-gap: 1rem;
   }
 
+  #project-header time {
+    justify-self: start;
+  }
+
+  #project-header p {
+    justify-self: start;
+  }
+
   #project-header span {
     margin-bottom: 2rem;
     justify-self: flex-end;
-  }
-
-  #project-header div:last-of-type {
-    padding: 0 1rem;
   }
 
   .iframe-wrapper.module-full-width.small,
@@ -5600,14 +5592,19 @@ transition: filter .3s linear;
     margin: 1rem 0;
   }
 
+  .module-full-width {
+    width: 100%;
+  }
+
   .module-full-width.medium,
   .module-full-width.small {
     height: auto;
     margin: 1rem 0;
+    padding: 0;
   }
 
   .module-two-columns {
-    margin: 1rem 0;
+    padding: 0;
     grid-template-columns: 1fr;
   }
 
@@ -5620,8 +5617,17 @@ transition: filter .3s linear;
     margin: 0;
   }
 
+  .module-gallery {
+    padding: 0;
+  }
+
+  .module-full-width-video {
+    padding: 0;
+  }
+
   .module-text {
     margin: 5rem 0;
+    padding: 0;
   }
 
   .module-text p {
@@ -5632,9 +5638,15 @@ transition: filter .3s linear;
     text-align: left !important;
   }
 
-  #credits {
-    margin-top: 5rem;
+  #barba-wrapper {
+    display: grid;
     grid-template-columns: 1fr;
+  }
+
+  #credits {
+    margin: 5rem 0;
+    grid-template-columns: 1fr;
+    padding: 0;
   }
 
   #credits > br {
@@ -5651,10 +5663,6 @@ transition: filter .3s linear;
 
   #credits wrap div span:first-child {
     padding: 0 0 0.5rem;
-  }
-
-  #credits wrap div span:last-of-type {
-    padding: 0 1rem;
   }
 
   #related {
