--- a/src/scss/main/_projects.scss
+++ b/src/scss/main/_projects.scss
@@ -173,6 +173,7 @@ main.scroll .project:nth-child(4n+4) .thumbnail .thumb {
 
 #project-header {
   margin-bottom: 10rem;
+  margin-top: 5rem;
   grid-template-columns: 4fr 2fr 5fr 1fr;
   display: grid;
   time {
