--- a/src/scss/main/_responsive.scss
+++ b/src/scss/main/_responsive.scss
@@ -90,7 +90,7 @@
     }
     /*Project Page*/
     #project-header {
-        grid-template-columns: 1fr 1fr 2fr;
+      grid-template-columns: 4fr 2fr 5fr 1fr;
     }
     #credits wrap div {
         grid-template-columns: 1fr 3fr;
@@ -126,6 +126,11 @@
         grid-gap: 5rem calc(40%/2);
     }
     /*Index Covers*/
+    main.covers {
+      padding: 100vh 1rem 0;
+    }
+
+
     main.covers .project {
         width: 100%;
         justify-self: flex-start;
@@ -161,19 +166,12 @@
     /* #top{
 		margin: 4rem auto 2rem;
 	} */
-    /*Footer*/
-    footer label {
-        display: block;
-    }
-    .device footer div:last-of-type a span:first-child::after {
-        content: ':';
-    }
     /*Project Page*/
     .module-two-columns .small {
         margin: 0 calc(100%/6);
     }
     #credits {
-        grid-template-columns: 1fr 3fr;
+        grid-template-columns: 1fr 1fr;
     }
     #credits wrap div {
         grid-template-columns: 1fr 2fr;
@@ -193,7 +191,7 @@
     }
     /*Index*/
     main {
-        padding: 100vh 1rem 0;
+      padding: 100vh 1rem 5rem;
     }
     main.list {
         padding: 2.5rem 1rem 0;
@@ -226,33 +224,40 @@
     }
     /*Project Page*/
     #close {
-        left: auto;
-        right: 1rem;
+
     }
     #project-header {
         margin-bottom: 3rem;
         grid-template-columns: 1fr;
         grid-gap: 1rem;
+        time {
+          justify-self: start;
+        }
+        p {
+          justify-self: start;
+        }
     }
     #project-header span {
         margin-bottom: 2rem;
         justify-self: flex-end;
-    }
-    #project-header div:last-of-type {
-        padding: 0 1rem;
     }
     .iframe-wrapper.module-full-width.small,
     .iframe-wrapper.module-full-width.medium {
         width: 100%;
         margin: 1rem 0;
     }
+
+    .module-full-width {
+      width: 100%;
+    }
     .module-full-width.medium,
     .module-full-width.small {
         height: auto;
         margin: 1rem 0;
+        padding: 0;
     }
     .module-two-columns {
-        margin: 1rem 0;
+      padding: 0;
         grid-template-columns: 1fr;
     }
     .module-two-columns .module-right {
@@ -262,9 +267,16 @@
         width: 100%;
         margin: 0;
     }
+.module-gallery {
 
+  padding: 0;
+}
+    .module-full-width-video {
+      padding: 0;
+    }
     .module-text {
         margin: 5rem 0;
+        padding: 0;
     }
     .module-text p {
         width: 100%;
@@ -273,9 +285,14 @@
         margin: 0 !important;
         text-align: left !important;
     }
+    #barba-wrapper {
+      display: grid;
+      grid-template-columns: 1fr;
+      }
     #credits {
-        margin-top: 5rem;
+        margin: 5rem 0;
         grid-template-columns: 1fr;
+        padding: 0
     }
     #credits>br {
         display: none;
@@ -288,9 +305,6 @@
     }
     #credits wrap div span:first-child {
         padding: 0 0 .5rem;
-    }
-    #credits wrap div span:last-of-type {
-        padding: 0 1rem;
     }
     #related {
         margin-top: 5rem;
