--- a/src/scss/pages/_homepageLayout.scss
+++ b/src/scss/pages/_homepageLayout.scss
@@ -1,7 +1,7 @@
 #wrapper {
   position: sticky;
   top: 300px;
-  padding-top: calc(var(--lineHeight) * 1);
+  padding-top: 1rem;
   transition: top 0.9s ease-in-out;
   width: 50%;
   margin: auto;
