--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -26,12 +26,14 @@
   // ColorSettings
   --darkmode-black: #151516;
   --foreground-color: #121217;
+  --foregroundMix-color: #fff;
+  --primary-color: #ff4c00;
+  --primaryMix-color: #04AFF9;
   --background-color: #fbfbf9;
   --background-color-alpha: rgba(234, 240, 244, 0.7);
   --background-color-black-elevated: #151519;
   --background-color-elevated: #fbfbf9;
   --background-color-dark: #d0ccff;
-  --primary-color: #ff4c00;
   --primary-color-hover: #544ac1;
   --primary-color-hover-dark: #544ac1;
   --overlay: rgba(0, 0, 0, 0.5);
