--- a/src/scss/pages/_menu.scss
+++ b/src/scss/pages/_menu.scss
@@ -1,4 +1,5 @@
 menu {
+  menu {
   width: fit-content;
   width: -moz-fit-content;
   padding: 0 1rem;
@@ -40,4 +41,6 @@ menu .wrapper:last-of-type+a {
   grid-template-columns: min-content 1fr;
   grid-gap: .3rem;
   text-transform: uppercase;
+}
+
 }
